--- a/main.construction.cn/src/main/AndroidManifest.xml
+++ b/main.construction.cn/src/main/AndroidManifest.xml
@@ -1,10 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.mainconstruction.cn">
 
-
-
     <application
-        android:name=".AppMainApp"
         android:allowBackup="true"
         android:label="@string/appmain_app_name"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
@@ -16,6 +13,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".activity.ChannelActivity"/>
     </application>
 
 </manifest>
